--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap");
+
 
 // Color Variables
 $bg-primary: #181a20;
@@ -18,21 +22,10 @@ body {
   min-height: 100vh;
 }
 
-main {
-  max-width: 550px;
-  margin: 48px auto;
-  background: $bg-secondary;
-  border-radius: 16px;
-  box-shadow: 0 4px 24px $shadow-dark;
-  padding: 32px 40px 40px 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 h1 {
   font-size: 2.2rem;
   font-weight: 700;
+  // font-family: 'Space Grotesk', sans-serif;
   margin-bottom: 24px;
   color: $accent;
   letter-spacing: 1px;
@@ -57,6 +50,7 @@ input[type="text"] {
   outline: none;
   box-shadow: 0 2px 8px $shadow-light;
   transition: box-shadow 0.2s;
+  font-family: 'Consolas', 'Courier New', Courier, monospace;
 }
 
 input[type="text"]:focus {
@@ -66,4 +60,13 @@ input[type="text"]:focus {
 input[type="text"]::placeholder {
   color: transparentize($accent, 0.2);
   opacity: 1;
+}
+
+app-truth-table {
+  min-width: 50%;
+  max-width: 100%;
+}
+
+app-legend {
+  width: 100%;
 }
